# testgame-cpp

./: CMakeLists.txt
include/: Camera.h  Crafts.h  GameMap.h  IPlaceable.h
include/blocks/: AirBlock.h  BaseBlock.h  StoneBlock.h
include/entities/: BaseEntity.h  PlayerEntity.h
include/fblocks/: BaseFBlock.h  StoneFBlock.h
include/inventory/: container.h  slot.h
include/items/: BaseItem.h  CoalItem.h  CopperOreItem.h
include/overlays/: BaseOverlay.h  CraftingOverlay.h  InventoryOverlay.h  PauseOverlay.h
src/: Camera.cpp  Crafts.cpp  GameMap.cpp  main.cpp
src/blocks/: AirBlock.cpp  BaseBlock.cpp  StoneBlock.cpp
src/entities/: BaseEntity.cpp  PlayerEntity.cpp
src/fblocks/: BaseFBlock.cpp  StoneFBlock.cpp
src/inventory/: container.cpp  slot.cpp
src/items/: BaseItem.cpp  CoalItem.cpp  CopperOreItem.cpp
src/overlays/: BaseOverlay.cpp  CraftingOverlay.cpp  InventoryOverlay.cpp  PauseOverlay.cpp
